so enventually i was near

--- a/html/shop.html
+++ b/html/shop.html
@@ -912,7 +912,7 @@
 
                         <div
                             class="main-con--grid--sidebar--main-part--listening-part--normal-box main-con--grid--sidebar--main-part--listening-part--normal-box--drop">
-                             <div class="main-con--grid--sidebar--main-part--listening-part--normal-box--icon-con">
+                            <div class="main-con--grid--sidebar--main-part--listening-part--normal-box--icon-con">
                                 <div
                                     class="main-con--grid--sidebar--main-part--listening-part--normal-box--icon-con--circle">
                                     <i data-visualcompletion="css-img"
@@ -925,10 +925,11 @@
                                     Buying</p>
                             </div>
                             <div class="main-con--grid--sidebar--main-part--listening-part--normal-box--drop--con">
-                                <i data-visualcompletion="css-img" class="main-con--grid--sidebar--main-part--listening-part--normal-box--drop--con--icon"
-                                style="background-image: url(&quot;https://static.xx.fbcdn.net/rsrc.php/v3/yG/r/AIv5-9MmZfT.png&quot;); background-position: -131px -88px; background-size: auto; width: 16px; height: 16px; background-repeat: no-repeat; display: inline-block; user-select: auto;"></i>
+                                <i data-visualcompletion="css-img"
+                                    class="main-con--grid--sidebar--main-part--listening-part--normal-box--drop--con--icon"
+                                    style="background-image: url(&quot;https://static.xx.fbcdn.net/rsrc.php/v3/yG/r/AIv5-9MmZfT.png&quot;); background-position: -131px -88px; background-size: auto; width: 16px; height: 16px; background-repeat: no-repeat; display: inline-block; user-select: auto;"></i>
                             </div>
-                            
+
 
                         </div>
                         <div
@@ -946,21 +947,45 @@
                                     Selling</p>
                             </div>
                             <div class="main-con--grid--sidebar--main-part--listening-part--normal-box--drop--con">
-                                <i data-visualcompletion="css-img" class="main-con--grid--sidebar--main-part--listening-part--normal-box--drop--con--icon"
-                                style="background-image: url(&quot;https://static.xx.fbcdn.net/rsrc.php/v3/yG/r/AIv5-9MmZfT.png&quot;); background-position: -131px -88px; background-size: auto; width: 16px; height: 16px; background-repeat: no-repeat; display: inline-block; user-select: auto;"></i>
+                                <i data-visualcompletion="css-img"
+                                    class="main-con--grid--sidebar--main-part--listening-part--normal-box--drop--con--icon"
+                                    style="background-image: url(&quot;https://static.xx.fbcdn.net/rsrc.php/v3/yG/r/AIv5-9MmZfT.png&quot;); background-position: -131px -88px; background-size: auto; width: 16px; height: 16px; background-repeat: no-repeat; display: inline-block; user-select: auto;"></i>
                             </div>
                         </div>
                         <div class="main-con--grid--sidebar--main-part--listening-part--create">
                             <p class="main-con--grid--sidebar--main-part--listening-part--create--txt">
-                                <span style="font-size: 2rem; margin-right: 0.3rem;margin-top: 0.5rem;">+</span> Create
+                                <span
+                                    style="font-size: 2rem; margin-right: 0.3rem;padding-top: 4rem; font-weight: lighter;">+</span>
+                                Create
                                 new listing
                             </p>
                         </div>
                         <div class="main-con--grid--sidebar--main-part--listening-part--divider"></div>
                     </div>
+                    <div class="main-con--grid--sidebar--filters">
+                        <div class="main-con--grid--sidebar--filters--grid">
+                            <div class="main-con--grid--sidebar--filters--grid--txt-con">
+                                <p class="main-con--grid--sidebar--filters--grid--txt-con--txt">Filters</p>
+                            </div>
+                            <div class="main-con--grid--sidebar--filters--grid--links">
+                                <p class="main-con--grid--sidebar--filters--grid--links--txt">
+                                    New York, New York.Within 311 miles
+                                </p>
+                            </div>
+                            <div class="main-con--grid--sidebar--filters--divider"></div>
+
+                        </div>
+                   
+                    </div>
+                    <div class="main-con--grid--sidebar--categories">
+                        <p class="main-con--grid--sidebar--categories--heading">Categories</p> 
+                    </div>
                 </div>
+
             </div>
+
         </div>
+
     </main>
 </body>
 
