hello miamm making oroduct

--- a/html/shop.html
+++ b/html/shop.html
@@ -1251,7 +1251,7 @@
                 </div>
 
             </div>
-
+            <div class="main-con--grid--product"></div>
         </div>
 
     </main>
