--- a/html/shop.html
+++ b/html/shop.html
@@ -1282,10 +1282,39 @@
                     <p class="main-con--grid--product--heading-con--heading">Today's picks
                     </p>
                     <div class="main-con--grid--product--heading-con--location">
-                        <i data-visualcompletion="css-img" class="main-con--grid--product--heading-con--location--icon" style="background-image: url(&quot;https://static.xx.fbcdn.net/rsrc.php/v3/yC/r/pPsBzfQ1Bdt.png&quot;); background-position: 0px -630px; background-size: auto; width: 16px; height: 16px; background-repeat: no-repeat; display: inline-block; user-select: auto;"></i>
-                        <p 
-                        class="main-con--grid--product--heading-con--location--txt">New York.311 mii</p>
-                        
+                        <i data-visualcompletion="css-img" class="main-con--grid--product--heading-con--location--icon"
+                            style="background-image: url(&quot;https://static.xx.fbcdn.net/rsrc.php/v3/yC/r/pPsBzfQ1Bdt.png&quot;); background-position: 0px -630px; background-size: auto; width: 16px; height: 16px; background-repeat: no-repeat; display: inline-block; user-select: auto;"></i>
+                        <p class="main-con--grid--product--heading-con--location--txt">New York.311 mii</p>
+
+                    </div>
+                </div>
+                <div class="main-con--grid--product--product-con">
+                    <div class="main-con--grid--product--product-con--grid">
+                        <div class="main-con--grid--product--product-con--grid--box">
+                            <div class="main-con--grid--product--product-con--grid--box--sub-box"></div>
+                            <div class="main-con--grid--product--product-con--grid--box--sub-box"></div>
+                            <div class="main-con--grid--product--product-con--grid--box--sub-box"></div>
+                        </div>
+                        <div class="main-con--grid--product--product-con--grid--box">
+                            <div class="main-con--grid--product--product-con--grid--box--sub-box"></div>
+                            <div class="main-con--grid--product--product-con--grid--box--sub-box"></div>
+                            <div class="main-con--grid--product--product-con--grid--box--sub-box"></div>
+                        </div>
+                        <div class="main-con--grid--product--product-con--grid--box">
+                            <div class="main-con--grid--product--product-con--grid--box--sub-box"></div>
+                            <div class="main-con--grid--product--product-con--grid--box--sub-box"></div>
+                            <div class="main-con--grid--product--product-con--grid--box--sub-box"></div>
+                        </div>
+                        <div class="main-con--grid--product--product-con--grid--box">
+                            <div class="main-con--grid--product--product-con--grid--box--sub-box"></div>
+                            <div class="main-con--grid--product--product-con--grid--box--sub-box"></div>
+                            <div class="main-con--grid--product--product-con--grid--box--sub-box"></div>
+                        </div>
+                        <div class="main-con--grid--product--product-con--grid--box">
+                            <div class="main-con--grid--product--product-con--grid--box--sub-box"></div>
+                            <div class="main-con--grid--product--product-con--grid--box--sub-box"></div>
+                            <div class="main-con--grid--product--product-con--grid--box--sub-box"></div>
+                        </div>
                     </div>
                 </div>
             </div>
