hellom desktop view is almost completed

--- a/html/shop.html
+++ b/html/shop.html
@@ -1291,29 +1291,164 @@
                 <div class="main-con--grid--product--product-con">
                     <div class="main-con--grid--product--product-con--grid">
                         <div class="main-con--grid--product--product-con--grid--box">
-                            <div class="main-con--grid--product--product-con--grid--box--sub-box"></div>
-                            <div class="main-con--grid--product--product-con--grid--box--sub-box"></div>
-                            <div class="main-con--grid--product--product-con--grid--box--sub-box"></div>
+                            <div class="main-con--grid--product--product-con--grid--box--sub-box">
+                                <div class="main-con--grid--product--product-con--grid--box--sub-box--img-con">
+                                    <img src="../img/product/Yard Sale! _33 Kenneth St Greensburg in Greensburg, PA.jpg" alt="" class="main-con--grid--product--product-con--grid--box--sub-box--img-con--img">
+                                </div>
+                                <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con">
+                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt">$890,000</div>
+                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt--name">Rawilns Awenew</div>
+                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt--name--author">Vanilla,Pin</div>
+                                </div>
+                            </div>
+                            <div class="main-con--grid--product--product-con--grid--box--sub-box">
+                                <div class="main-con--grid--product--product-con--grid--box--sub-box--img-con">
+                                    <img src="../img/product/home 3.jpg" alt="" class="main-con--grid--product--product-con--grid--box--sub-box--img-con--img">
+                                </div>
+                                <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con">
+                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt">$923,040</div>
+                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt--name">506 Garden Villa</div>
+                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt--name--author">Mia,Don</div>
+                                </div>
+                            </div>
+                            <div class="main-con--grid--product--product-con--grid--box--sub-box">
+                                <div class="main-con--grid--product--product-con--grid--box--sub-box--img-con">
+                                    <img src="../img/product/hone 2.jpg" alt="" class="main-con--grid--product--product-con--grid--box--sub-box--img-con--img">
+                                </div>
+                                <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con">
+                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt">$900,000,00</div>
+                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt--name">Grand Bang Sweat</div>
+                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt--name--author">Moly,James</div>
+                                </div>
+                            </div>
                         </div>
                         <div class="main-con--grid--product--product-con--grid--box">
-                            <div class="main-con--grid--product--product-con--grid--box--sub-box"></div>
-                            <div class="main-con--grid--product--product-con--grid--box--sub-box"></div>
-                            <div class="main-con--grid--product--product-con--grid--box--sub-box"></div>
+                            <div class="main-con--grid--product--product-con--grid--box--sub-box">
+                                <div class="main-con--grid--product--product-con--grid--box--sub-box--img-con">
+                                    <img src="../img/product/Yard Sale! _33 Kenneth St Greensburg in Greensburg, PA.jpg" alt="" class="main-con--grid--product--product-con--grid--box--sub-box--img-con--img">
+                                </div>
+                                <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con">
+                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt">$890,000</div>
+                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt--name">Rawilns Awenew</div>
+                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt--name--author">Vanilla,Pin</div>
+                                </div>
+                            </div>
+                            <div class="main-con--grid--product--product-con--grid--box--sub-box">
+                                <div class="main-con--grid--product--product-con--grid--box--sub-box--img-con">
+                                    <img src="../img/product/Yard Sale! _33 Kenneth St Greensburg in Greensburg, PA.jpg" alt="" class="main-con--grid--product--product-con--grid--box--sub-box--img-con--img">
+                                </div>
+                                <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con">
+                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt">$890,000</div>
+                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt--name">Rawilns Awenew</div>
+                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt--name--author">Vanilla,Pin</div>
+                                </div>
+                            </div>
+                            <div class="main-con--grid--product--product-con--grid--box--sub-box">
+                                <div class="main-con--grid--product--product-con--grid--box--sub-box--img-con">
+                                    <img src="../img/product/Yard Sale! _33 Kenneth St Greensburg in Greensburg, PA.jpg" alt="" class="main-con--grid--product--product-con--grid--box--sub-box--img-con--img">
+                                </div>
+                                <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con">
+                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt">$890,000</div>
+                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt--name">Rawilns Awenew</div>
+                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt--name--author">Vanilla,Pin</div>
+                                </div>
+                            </div>
                         </div>
                         <div class="main-con--grid--product--product-con--grid--box">
-                            <div class="main-con--grid--product--product-con--grid--box--sub-box"></div>
-                            <div class="main-con--grid--product--product-con--grid--box--sub-box"></div>
-                            <div class="main-con--grid--product--product-con--grid--box--sub-box"></div>
+                            <div class="main-con--grid--product--product-con--grid--box--sub-box">
+                                <div class="main-con--grid--product--product-con--grid--box--sub-box--img-con">
+                                    <img src="../img/product/Yard Sale! _33 Kenneth St Greensburg in Greensburg, PA.jpg" alt="" class="main-con--grid--product--product-con--grid--box--sub-box--img-con--img">
+                                </div>
+                                <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con">
+                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt">$890,000</div>
+                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt--name">Rawilns Awenew</div>
+                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt--name--author">Vanilla,Pin</div>
+                                </div>
+                            </div>
+                            <div class="main-con--grid--product--product-con--grid--box--sub-box">
+                                <div class="main-con--grid--product--product-con--grid--box--sub-box--img-con">
+                                    <img src="../img/product/Yard Sale! _33 Kenneth St Greensburg in Greensburg, PA.jpg" alt="" class="main-con--grid--product--product-con--grid--box--sub-box--img-con--img">
+                                </div>
+                                <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con">
+                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt">$890,000</div>
+                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt--name">Rawilns Awenew</div>
+                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt--name--author">Vanilla,Pin</div>
+                                </div>
+                            </div>
+                            <div class="main-con--grid--product--product-con--grid--box--sub-box">
+                                <div class="main-con--grid--product--product-con--grid--box--sub-box--img-con">
+                                    <img src="../img/product/Yard Sale! _33 Kenneth St Greensburg in Greensburg, PA.jpg" alt="" class="main-con--grid--product--product-con--grid--box--sub-box--img-con--img">
+                                </div>
+                                <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con">
+                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt">$890,000</div>
+                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt--name">Rawilns Awenew</div>
+                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt--name--author">Vanilla,Pin</div>
+                                </div>
+                            </div>
                         </div>
                         <div class="main-con--grid--product--product-con--grid--box">
-                            <div class="main-con--grid--product--product-con--grid--box--sub-box"></div>
-                            <div class="main-con--grid--product--product-con--grid--box--sub-box"></div>
-                            <div class="main-con--grid--product--product-con--grid--box--sub-box"></div>
+                            <div class="main-con--grid--product--product-con--grid--box--sub-box">
+                                <div class="main-con--grid--product--product-con--grid--box--sub-box--img-con">
+                                    <img src="../img/product/Yard Sale! _33 Kenneth St Greensburg in Greensburg, PA.jpg" alt="" class="main-con--grid--product--product-con--grid--box--sub-box--img-con--img">
+                                </div>
+                                <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con">
+                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt">$890,000</div>
+                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt--name">Rawilns Awenew</div>
+                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt--name--author">Vanilla,Pin</div>
+                                </div>
+                            </div>
+                            <div class="main-con--grid--product--product-con--grid--box--sub-box">
+                                <div class="main-con--grid--product--product-con--grid--box--sub-box--img-con">
+                                    <img src="../img/product/Yard Sale! _33 Kenneth St Greensburg in Greensburg, PA.jpg" alt="" class="main-con--grid--product--product-con--grid--box--sub-box--img-con--img">
+                                </div>
+                                <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con">
+                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt">$890,000</div>
+                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt--name">Rawilns Awenew</div>
+                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt--name--author">Vanilla,Pin</div>
+                                </div>
+                            </div>
+                            <div class="main-con--grid--product--product-con--grid--box--sub-box">
+                                <div class="main-con--grid--product--product-con--grid--box--sub-box--img-con">
+                                    <img src="../img/product/Yard Sale! _33 Kenneth St Greensburg in Greensburg, PA.jpg" alt="" class="main-con--grid--product--product-con--grid--box--sub-box--img-con--img">
+                                </div>
+                                <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con">
+                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt">$890,000</div>
+                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt--name">Rawilns Awenew</div>
+                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt--name--author">Vanilla,Pin</div>
+                                </div>
+                            </div>
                         </div>
                         <div class="main-con--grid--product--product-con--grid--box">
-                            <div class="main-con--grid--product--product-con--grid--box--sub-box"></div>
-                            <div class="main-con--grid--product--product-con--grid--box--sub-box"></div>
-                            <div class="main-con--grid--product--product-con--grid--box--sub-box"></div>
+                            <div class="main-con--grid--product--product-con--grid--box--sub-box">
+                                <div class="main-con--grid--product--product-con--grid--box--sub-box--img-con">
+                                    <img src="../img/product/Yard Sale! _33 Kenneth St Greensburg in Greensburg, PA.jpg" alt="" class="main-con--grid--product--product-con--grid--box--sub-box--img-con--img">
+                                </div>
+                                <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con">
+                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt">$890,000</div>
+                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt--name">Rawilns Awenew</div>
+                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt--name--author">Vanilla,Pin</div>
+                                </div>
+                            </div>
+                            <div class="main-con--grid--product--product-con--grid--box--sub-box">
+                                <div class="main-con--grid--product--product-con--grid--box--sub-box--img-con">
+                                    <img src="../img/product/Yard Sale! _33 Kenneth St Greensburg in Greensburg, PA.jpg" alt="" class="main-con--grid--product--product-con--grid--box--sub-box--img-con--img">
+                                </div>
+                                <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con">
+                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt">$890,000</div>
+                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt--name">Rawilns Awenew</div>
+                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt--name--author">Vanilla,Pin</div>
+                                </div>
+                            </div>
+                            <div class="main-con--grid--product--product-con--grid--box--sub-box">
+                                <div class="main-con--grid--product--product-con--grid--box--sub-box--img-con">
+                                    <img src="../img/product/Yard Sale! _33 Kenneth St Greensburg in Greensburg, PA.jpg" alt="" class="main-con--grid--product--product-con--grid--box--sub-box--img-con--img">
+                                </div>
+                                <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con">
+                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt">$890,000</div>
+                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt--name">Rawilns Awenew</div>
+                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt--name--author">Vanilla,Pin</div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
