hello i am responsive .........boooooo

--- a/html/shop.html
+++ b/html/shop.html
@@ -1340,7 +1340,7 @@
                                 <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con">
                                     <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt">$368,250
                                     </div>
-                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt--name">2019 Audi AI Trail quattro concept</div>
+                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt--name">2019 Audi  quattro concept</div>
                                     <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt--name--author">Johs,Ford</div>
                                 </div>
                             </div>
@@ -1362,7 +1362,7 @@
                                 </div>
                                 <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con">
                                     <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt">$890.0</div>
-                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt--name">Apple iPhone 8 - 64GB - Unlocked</div>
+                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt--name">Apple iphone 17 (unlock)</div>
                                     <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt--name--author">Sans,spark</div>
                                 </div>
                             </div>
@@ -1372,7 +1372,7 @@
                                 </div>
                                 <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con">
                                     <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt">$89</div>
-                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt--name">For iPhone 13 Pro Max Mini Tempered Glass</div>
+                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt--name">For iPhone 13 Tempered Glass</div>
                                     <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt--name--author">Oliva,yu</div>
                                 </div>
                             </div>
@@ -1426,7 +1426,7 @@
                                 </div>
                                 <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con">
                                     <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt">$790</div>
-                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt--name">iMartine Robot Vaccuum in Great Condition</div>
+                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt--name">iMartine Robot Vaccuum</div>
                                     <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt--name--author">San,peace</div>
                                 </div>
                             </div>
@@ -1436,7 +1436,7 @@
                                 </div>
                                 <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con">
                                     <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt">$888</div>
-                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt--name">UV400 Futuristic Narrow Cyclops Visor</div>
+                                    <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt--name">UV400 Futuristic Visor</div>
                                     <div class="main-con--grid--product--product-con--grid--box--sub-box--txt-con--txt--name--author">Bles,Joke</div>
                                 </div>
                             </div>
