--- a/html/group.html
+++ b/html/group.html
@@ -899,7 +899,11 @@
                         </div>
                         <div class="main-con--grid--sidebar--main-part--group-part--grid">
                             <div class="main-con--grid--sidebar--main-part--group-part--grid--box">
-                                <div class="main-con--grid--sidebar--main-part--group-part--grid--box--img"></div>
+                                <div class="main-con--grid--sidebar--main-part--group-part--grid--box--img">
+<div class="main-con--grid--sidebar--main-part--group-part--grid--box--img--img">
+    <img src="../img/user/user-39.jpg" alt="" class="main-con--grid--sidebar--main-part--group-part--grid--box--img--img--img">
+</div>
+                                </div>
                                 <div class="main-con--grid--sidebar--main-part--group-part--grid--box--txt"></div>
                             </div>
                             <div class="main-con--grid--sidebar--main-part--group-part--grid--box"></div>
