--- a/html/group.html
+++ b/html/group.html
@@ -1202,7 +1202,7 @@
                                 <p class="maincon--grid--ads--grid--ads-box--txt--head--txt">Suggestion For You</p>
                                 <p class="maincon--grid--ads--grid--ads-box--txt--head--more">See More</p>
                             </div>
-                            <div class="maincon--grid--ads--grid--ads-box--txt--box"></div>
+                            <div class="maincon--grid--ads--grid--ads-box--txt--subhead">Groups you might be interested in.    </div>
                         </div>
                         <div class="maincon--grid--ads--grid--ads-box--box"></div>
                         <div class="maincon--grid--ads--grid--ads-box--box"></div>
