--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="./icons/favicon/favicon.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/10c6a50922.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/10c6a50922.js" crossorigin="anonymous"></script>
-    <script src="./js/function.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 
@@ -1488,6 +1488,7 @@
                     <img src="./icons/favicon/favicon.ico" alt="" class="nav-grid--box--search--icon-box--icon">
                 </div>
                 <div class="nav-grid--box--search--search">
+                    <i class="nav-grid--box--search--search--input--icon fa-1x fa-solid fa-magnifying-glass"></i>
                     <input class="nav-grid--box--search--search--input" placeholder="Search Facebook" type="search" name="" id="">           
                 </div>
             </div>
@@ -2431,7 +2432,7 @@
             </div>
         </section>
     </main>
-
+<script src="./js/index.js"></script>
 </body>
 
 </html>
